<resources>
    <string name="app_name">MIearn</string>
</resources>

